--- a/index.html
+++ b/index.html
@@ -1233,9 +1233,12 @@ b.conum * { color: inherit !important; }
 <li><a href="#_example">Example</a></li>
 </ul>
 </li>
-<li><a href="#_building">Building</a></li>
+<li><a href="#_building">Building</a>
+<ul class="sectlevel2">
 <li><a href="#_running_the_build">Running the build</a></li>
 <li><a href="#_testing">Testing</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -1306,20 +1309,14 @@ whatnot, as services versus applications, per se, is what this is for.</p>
 <div class="sect1">
 <h2 id="_building">Building</h2>
 <div class="sectionbody">
-
-</div>
-</div>
-<div class="sect1">
-<h2 id="_running_the_build">Running the build</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_running_the_build">Running the build</h3>
 <div class="paragraph">
 <p>Run <code>./gradlew</code></p>
 </div>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_testing">Testing</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_testing">Testing</h3>
 <div class="paragraph">
 <p>For the Windows testing you&#8217;ll need wine and powershell v1 and there&#8217;s no cygwin stuff so I guess
 you can only run all the tests on *nix systems at the moment.</p>
@@ -1327,9 +1324,10 @@ you can only run all the tests on *nix systems at the moment.</p>
 </div>
 </div>
 </div>
+</div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-06-08 00:12:41 MDT
+Last updated 2018-06-08 00:14:18 MDT
 </div>
 </div>
 
