--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@ b.conum * { color: inherit !important; }
 .admonitionblock > table { margin-bottom: 0; }
 .admonitionblock > table td.content { border-left: none; }
 
-.toc2{overflow:hidden}
+#toc.toc2{overflow-y:hidden}
               .toc{overflow-y:auto}.toc>.toc-list{overflow:hidden;position:relative}.toc>.toc-list li{list-style:none}.toc-list{margin:0;padding-left:10px}a.toc-link{color:currentColor;height:100%}.is-collapsible{max-height:1000px;overflow:hidden;transition:all 300ms ease-in-out}.is-collapsed{max-height:0}.is-position-fixed{position:fixed !important;top:0}.is-active-link{font-weight:700}.toc-link::before{background-color:#EEE;content:' ';display:inline-block;height:inherit;left:0;margin-top:-1px;position:absolute;width:2px}.is-active-link::before{background-color:#54BC4B}
             </style>
 
